18590
```scala
object foo {
  val foo = if (bar) s"x" else s""
  val bar = true
}
```
fails with:
```
test.scala:3: error: ';' expected but 'val' found.
val bar = true
^
one error found
```
